--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="main">
         <div id="time" class="time">12:00</div>
         <div class="greeting">Hello!!</div>
-        <div class="todo">오늘 할일</div>
+        <div class="todo">2032년엔 제주에서!!</div>
     </div>
     <div class="quote">
         <div id="author" class="author">명언의 저자</div>
